--- a/pagepaiement.html
+++ b/pagepaiement.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Paiement</title>
 </head>
 
 <body>
     <h1>Procéder au paiement de votre commande</h1>
-    <div class="contact">
+    <section class="contact">
         <div>
             <label name="name">Nom et Prénom</label>
             <input type="text" id="name">
@@ -31,7 +31,32 @@
             <label name="city">Ville</label>
             <input type="text" id="city">
         </div>
-    </div>
+    </section>
+    <section class="paiement">
+        <div class="option1">
+            <h1>CB</h1>
+            <div>
+                <label name="namecb">Nom</label>
+                <input type="text" id="namecb">
+            </div>
+            <div>
+                <label name="numberCard">Numéro de carte</label>
+                <input type="text" id="numberCard">
+            </div>
+            <div>
+                <label name="dateExpiration">Date d'expiration</label>
+                <input type="text" id="dateExpiration">
+            </div>
+            <div>
+                <label name="security">Code de sécurité</label>
+                <input type="text" id="security">
+            </div>
+        </div>
+        <div class="option2">
+            <h1>Espèce</h1>
+            <p>Veuillez préparer l'appoint pour le livreur</p>
+        </div>
+    </section>
 </body>
 
 </html>
