update pagepaiement.html file and creation pagepaiement.css

--- a/pagepaiement.html
+++ b/pagepaiement.html
@@ -6,57 +6,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paiement</title>
+    <link rel="stylesheet" href="pagepaiement.css">
 </head>
 
 <body>
-    <h1>Procéder au paiement de votre commande</h1>
-    <section class="contact">
-        <div>
-            <label name="name">Nom et Prénom</label>
-            <input type="text" id="name">
+
+    <h1>Procédez au paiement de votre commande</h1>
+    <section class="blocs">
+        <div class="contact">
+            <h2>Vos coordonnées</h2>
+            <div>
+                <label name="name">Nom et Prénom</label>
+                <input type="text" id="name">
+            </div>
+            <div>
+                <label name="phone">Téléphone</label>
+                <br>
+                <input type="text" id="phone">
+            </div>
+            <div>
+                <label name="adresse">Adresse</label>
+                <br>
+                <input type="text" id="adresse">
+            </div>
+            <div>
+                <label name="code">Code adresse</label>
+                <br>
+                <input type="text" id="code">
+            </div>
+            <div>
+                <label name="city">Ville</label>
+                <br>
+                <input type="text" id="city">
+            </div>
         </div>
-        <div>
-            <label name="phone">Téléphone</label>
-            <input type="text" id="phone">
+
+        <div class="paiement">
+            <div>
+                <h2>Choissisez votre mode de paiement</h2>
+                <input type="radio" id="cash" class="option">
+                <label for="cash" class="option">CB</label>
+                <div>
+                    <label name="namecb">Nom</label>
+                    <br>
+                    <input type="text" id="namecb">
+                </div>
+                <div>
+                    <label name="numberCard">Numéro de carte</label>
+                    <br>
+                    <input type="text" id="numberCard">
+                </div>
+                <div>
+                    <label name="dateExpiration">Date d'expiration</label>
+                    <br>
+                    <input type="text" id="dateExpiration">
+                </div>
+                <div>
+                    <label name="security">Code de sécurité</label>
+                    <br>
+                    <input type="text" id="security">
+                </div>
+            </div>
+            <div>
+                <input type="radio" id="cash" class="option">
+                <label for="cash" class="option">Espèce</label>
+                <p>Veuillez préparer l'appoint pour le livreur</p>
+            </div>
         </div>
-        <div>
-            <label name="adresse">Adresse</label>
-            <input type="text" id="adresse">
-        </div>
-        <div>
-            <label name="code">Code adresse</label>
-            <input type="text" id="code">
-        </div>
-        <div>
-            <label name="city">Ville</label>
-            <input type="text" id="city">
+
+        <div class="recap">
+            <h2>Récapitulatif de la commande</h2>
+            <div id="nombre">
+            </div>
+            <div class="btn">
+                <p>Prix total <span id="price"></span></p>
+            </div>
         </div>
     </section>
-    <section class="paiement">
-        <div class="option1">
-            <h1>CB</h1>
-            <div>
-                <label name="namecb">Nom</label>
-                <input type="text" id="namecb">
-            </div>
-            <div>
-                <label name="numberCard">Numéro de carte</label>
-                <input type="text" id="numberCard">
-            </div>
-            <div>
-                <label name="dateExpiration">Date d'expiration</label>
-                <input type="text" id="dateExpiration">
-            </div>
-            <div>
-                <label name="security">Code de sécurité</label>
-                <input type="text" id="security">
-            </div>
-        </div>
-        <div class="option2">
-            <h1>Espèce</h1>
-            <p>Veuillez préparer l'appoint pour le livreur</p>
-        </div>
-    </section>
+    <div id="button">
+        <input type="submit" id="submit" value="Valider la commande">
+    </div>
+
 </body>
 
 </html>
