creation de la branche recap-storage, fusion des fichiers

--- a/pagepaiement.html
+++ b/pagepaiement.html
@@ -98,12 +98,8 @@
         <div class="recap">
             <h2>Récapitulatif de la commande</h2>
 
-            <div id="nombre">
-            <!--Code Gaelle-->
-            </div>
-
             <div class="btn">
-                <p>Prix total <span id="price"></span></p>
+                <p>Prix total <span id="price">52</span></p>
             </div>
         </div>
     </div>
