new branch jsAccueil is working well

--- a/html/pagepaiement.html
+++ b/html/pagepaiement.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paiement</title>
-    <link rel="stylesheet" href="pagepaiement.css">
+    <link rel="stylesheet" href="../css/pagepaiement.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <img src="./img/logo.png" alt="logo" width="200px" height="auto" id="logo">
     </div>
     <div id="namerestau">
-        <h1>La table du bonheur</h1>
+        <h1 id="returnToAccueil">La table du bonheur</h1>
     </div>
 </header>
 
@@ -109,8 +109,8 @@
             <div class="recap">
                 <h2>Récapitulatif de la commande</h2>
 
-            <div class="btn">
-                <p>Prix total <span id="price">52</span></p>
+            <div class="btn"> 
+                <p>Prix total : <span id="price"></span> €</p>
 
             </div>
         </div>
@@ -131,13 +131,13 @@
                 <p>44 Av. de l'Europe <br/>48000 Grenoble </p>
             </div>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11253.404594120584!2d5.7322375!3d45.1597387!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x91b3b3f2fa58b3b4!2sSimplon%20Grenoble%20Alpes!5e0!3m2!1sfr!2sfr!4v1672940475356!5m2!1sfr!2sfr" referrerpolicy="no-referrer-when-downgrade">
+                <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11253.404594120584!2d5.7322375!3d45.1597387!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x91b3b3f2fa58b3b4!2sSimplon%20Grenoble%20Alpes!5e0!3m2!1sfr!2sfr!4v1672940475356!5m2!1sfr!2sfr" referrerpolicy="no-referrer-when-downgrade"> -->
             </iframe>
             </div>
         </div>
     </footer>
 
-    <script src="./jspaiement.js"></script>
+    <script src="../js/jspaiement.js"></script>
 
 </body>
 
