--- a/html/pagepaiement.html
+++ b/html/pagepaiement.html
@@ -116,14 +116,13 @@
                         <p>Veuillez préparer l'appoint pour le livreur</p>
                     </div>
 
-                    <!--si il y a un probleme c'est ici-->
                 </div>
 
                 <div class="recap">
                     <h4>Récapitulatif de la commande</h4>
 
                     <div class="btn">
-                        <p>Prix total <span id="price">52</span></p>
+                        <p>Prix total <span id="price">52</span> €</p>
                     </div>
                 </div>
             </div>
