--- a/html/accueil.html
+++ b/html/accueil.html
@@ -17,7 +17,7 @@
     <!-- HEADER -->
     <header class="head">
         <div id="logorestau">
-            <a href="file:///C:/Users/utilisateur/git/Passercommande/Passercommande/html/accueil.html">
+            <a href="./accueil.html">
                 <img src="../img/logo.png" alt="logo" width="200px" height="auto" id="logo">
             </a>
         </div>
