--- a/html/pagepaiement.html
+++ b/html/pagepaiement.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <header class="head">
         <div id="logorestau">
-            <a href="file:///C:/Users/utilisateur/git/Passercommande/Passercommande/html/accueil.html">
+            <a href="./accueil.html">
                 <img src="../img/logo.png" alt="logo" width="230px" height="auto" id="logo">
             </a>
         </div>
@@ -26,7 +26,7 @@
     </header>
 
     <div>
-        <a href="file:///C:/Users/utilisateur/git/Passercommande/Passercommande/html/accueil.html">
+        <a href="./pagepaiement.html">
             <button id="return">Retour</button>
         </a>
     </div>
